# pytorch-summary

./: README.md  README.org  pyproject.toml  requirements.txt  rf-numeric.ipynb  setup.py
pytorch_summary/: __init__.py  torchsummary.py
pytorch_summary/tests/: example_models.py  test_torchsummary.py
torchsummary/: torchsummary.py
torchsummary/tests/: test_torchsummary.py
